[project]
name = "cs7313"
version = "0.1.0"
description = "CS7313 Group Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.7",
    "numba>=0.63.0rc1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "cs7313",
    "pylint>=4.0.4",
    "autopep8>=2.3.2",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.9.1",
  "torchtext",
]
cu128 = [
  "torch>=2.9.1",
  "torchtext",
]
cu130 = [
  "torch>=2.9.1",
  "torchtext",
]
rocm = [
  "torch>=2.9.1",
  "torchtext",
  "pytorch-triton-rocm"
]

[tool.uv]
constraint-dependencies = [
  "llvmlite>=0.46.0.dev0", 
  "numba==0.63.0rc1"
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
    { extra = "rocm" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-rocm", extra = "rocm" },
]
torchtext = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" },
]
cs7313 = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
